// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a card with a footer 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c7 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="c6 c2"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a compounded card with a actions 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c6 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

<div
  aria-describedby="Card-1"
  aria-labelledby="Card-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
      id="Card-2"
    >
      This is a title
    </h5>
    <div>
      <div>
        test
      </div>
    </div>
  </div>
  <div
    class="c2"
    id="Card-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;

exports[`renders correctly for a default card 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
}

.c5:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c6 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;
